[gd_scene load_steps=7 format=3 uid="uid://5obyp7tmx8d5"]

[ext_resource type="Script" path="res://1_Scripts/ghost.gd" id="1_buk2y"]
[ext_resource type="Texture2D" uid="uid://i37lj6y78u34" path="res://2_Images/Actors/ghost.png" id="2_8vvv0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r51hn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h6k13"]
radius = 22.0
height = 54.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fi14n"]
radius = 84.7172

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_u20mc"]
polygon = PackedVector2Array(10, 16, 18, 7, 29, 3, 20, -10, 23, -17, 26, -24, 23, -29, 18, -28, 14, -23, 4, -31, -6, -31, -15, -26, -19, -29, -25, -27, -25, -20, -21, -18, -21, -10, -29, -3, -20, 8, -16, 15, -9, 17, -6, 23, -3, 23, 1, 19, 6, 21)

[node name="Ghost" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_buk2y")

[node name="Ghost" type="Sprite2D" parent="."]
position = Vector2(-2, -3)
texture = ExtResource("2_8vvv0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8.15094e-06, -2)
shape = SubResource("CapsuleShape2D_r51hn")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="PlayerCollider" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollider"]
shape = SubResource("CapsuleShape2D_h6k13")
debug_color = Color(0.972549, 0, 0.164706, 0.266667)

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_fi14n")
debug_color = Color(0.752007, 0.66244, 0.891397, 0.109804)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 16

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="fading" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_u20mc")
occluder_light_mask = 4

[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="fading" to="." method="_on_fading_timeout"]
